--- a/_talks/2021-09-01-ECOC.md
+++ b/_talks/2021-09-01-ECOC.md
@@ -1,5 +1,5 @@
 ---
-title: "Conference talk: Neural Networks For Nonlinear Fourier Spectrum Computation"
+title: "Neural Networks For Nonlinear Fourier Spectrum Computation"
 collection: talks
 type: "Conference talk"
 permalink: /talks/2021-09-01-ECOC
